--- a/DjangoTest/templates/base1/base.html
+++ b/DjangoTest/templates/base1/base.html
@@ -10,24 +10,31 @@
 		{% endblock %}
 		<link rel="stylesheet" type="text/css" href="{% static 'css/common.css'%}"/>
 		<link rel="stylesheet" type="text/css" href="{% static 'css/style.css'%}"/>
-	</head>
+	    <script src="{% static ''%}js/jquery-1.11.0.js" type="text/javascript"></script>
+          {% block script %}
+
+          {% endblock %}
+    </head>
 	<body>
-		<div class="clearfix nav">
+        {% block top1 %}
+            <div class="clearfix nav">
 			<a class="logo" href="javascript:;"></a>
 			<ul class="clearfix nav-wrap">
-				<li><a class="nav-item nav-active" href="index.html">首页</a></li>
-				<li><a class="nav-item" href="pinpai.html">品牌故事</a></li>
-				<li><a class="nav-item" href="meishi.html">美食系列</a></li>
-				<li><a class="nav-item" href="shop.html">店面展示</a></li>
-				<li><a class="nav-item" href="news.html">新闻资讯</a></li>
-				<li><a class="nav-item" href="about-us.html">关于我们</a></li>
+				<li><a class="nav-item nav-active" href="/project1/index">首页</a></li>
+				<li><a class="nav-item" href="/project1/pinpai">品牌故事</a></li>
+				<li><a class="nav-item" href="/project1/meishi">美食系列</a></li>
+				<li><a class="nav-item" href="/project1/shop">店面展示</a></li>
+				<li><a class="nav-item" href="/project1/news">新闻资讯</a></li>
+				<li><a class="nav-item" href="/project1/about_us">关于我们</a></li>
 			</ul>
 		</div>
+        {% endblock %}
+
 		
 		<div id="container">
 			<div id="buttons">
 		        <span index="1" class="on"></span>
-		        <span index="2"></span>
+		        <span index="2" ></span>
 		        <span index="3"></span>
 		    </div>
 		    <a href="javascript:;" id="prev" class="arrow"><img src="{% static ''%}img/l.png"/></a>
@@ -68,34 +75,10 @@
 				</div>
 			</div>
 		</div>
-		
+
+
 	</body>
 	<!--jq调用-->
-	<script src="{% static ''%}js/jquery-1.11.0.js" type="text/javascript"></script>
 
-	<script type="text/javascript">
-		//导航当前项切换	
-		$(".nav-item").click(function(){
-			$(this).parent("li").siblings().children().removeClass("nav-active");		
-			//点击对象的父级（li）的兄弟级（li）的子集（a）移除类
-			$(this).addClass("nav-active");												
-			//给点击对象添加类
-		});
-	   	  //新品推荐table切换
-	    var nSpan = document.getElementById("newfood-span");
-			var newspan = nSpan.querySelectorAll("span");
-			var oUl  = document.getElementById("newfood-table");
-			var uls = oUl.querySelectorAll("ul");
-			var last=newspan[0];
-			for(var i=0;i<newspan.length;i++){
-					newspan[i].index=i;  //给每一个按钮添加一个自定义属性，存储的是他们对应的索引值；
-					newspan[i].onclick=function(){
-						last.style.background="url(img/icon.png)";  //把上一次点击对象的背景更换掉
-						uls[last.index].style.display="none"; //上一个对应的div，让他隐藏
-						this.style.background="url(img/icon-2.png)"; //给当前点击的按钮添加背景
-						uls[this.index].style.display="block"; //当前点击按钮对应的div显示			
-						last=this; 	//把上一次点击的对象更新成当前点击的对象
-					};
-				};
-	</script>
+
 </html>
