--- a/DjangoTest/templates/new_html/meishi.html
+++ b/DjangoTest/templates/new_html/meishi.html
@@ -5,19 +5,19 @@
     <title>美食系列</title>
 {% endblock %}
 
-{% block top1 %}
-            <div class="clearfix nav">
-			<a class="logo" href="javascript:;"></a>
-			<ul class="clearfix nav-wrap">
-				<li><a class="nav-item" href="/project1/index">首页</a></li>
-				<li><a class="nav-item" href="/project1/pinpai">品牌故事</a></li>
-				<li><a class="nav-item  nav-active" href="/project1/meishi">美食系列</a></li>
-				<li><a class="nav-item" href="/project1/shop">店面展示</a></li>
-				<li><a class="nav-item" href="/project1/news">新闻资讯</a></li>
-				<li><a class="nav-item" href="/project1/about_us">关于我们</a></li>
-			</ul>
-		</div>
-{% endblock %}
+{#{% block top1 %}#}
+{#            <div class="clearfix nav">#}
+{#			<a class="logo" href="javascript:;"></a>#}
+{#			<ul class="clearfix nav-wrap">#}
+{#				<li><a class="nav-item" href="/project1/index">首页</a></li>#}
+{#				<li><a class="nav-item" href="/project1/pinpai">品牌故事</a></li>#}
+{#				<li><a class="nav-item  nav-active" href="/project1/meishi">美食系列</a></li>#}
+{#				<li><a class="nav-item" href="/project1/shop">店面展示</a></li>#}
+{#				<li><a class="nav-item" href="/project1/news">新闻资讯</a></li>#}
+{#				<li><a class="nav-item" href="/project1/about_us">关于我们</a></li>#}
+{#			</ul>#}
+{#		</div>#}
+{#{% endblock %}#}
 
 {% block content %}
     		<ul class="breadnav clearfix">
@@ -43,110 +43,36 @@
 		</div>
 		<div id="table-div">
 			<div class="table-pic table-show clearfix">
-				<a href="meishi-con.html" class="ms-wrap ms-right">
-					<span class="ms-pic">
-						<img src="{% static ''%}img/ms-pic1.jpg" alt="" />
-					</span>
-					<h2 class="ms-tit">海鲜芝士大虾</h2>
-					<p class="ms-txt">价格：49元</p>
-				</a>
-				<a href="meishi-con.html" class="ms-wrap ms-right">
-					<span class="ms-pic">
-						<img src="{% static ''%}img/ms-pic2.jpg" alt="" />
-					</span>
-					<h2 class="ms-tit">草莓布丁杯</h2>
-					<p class="ms-txt">价格：12元</p>
-				</a>
-				<a href="meishi-con.html" class="ms-wrap">
-					<span class="ms-pic">
-						<img src="{% static ''%}img/ms-pic3.jpg" alt="" />
-					</span>
-					<h2 class="ms-tit">菲力黑椒牛排</h2>
-					<p class="ms-txt">价格：69元</p>
-				</a>
-				<a href="meishi-con.html" class="ms-wrap ms-right">
-					<span class="ms-pic">
-						<img src="{% static ''%}img/ms-pic4.jpg" alt="" />
-					</span>
-					<h2 class="ms-tit">香煎排意面</h2>
-					<p class="ms-txt">价格：69元</p>
-				</a>
-				<a href="meishi-con.html" class="ms-wrap ms-right">
-					<span class="ms-pic">
-						<img src="{% static ''%}img/ms-pic5.jpg" alt="" />
-					</span>
-					<h2 class="ms-tit">鲜香培根比萨</h2>
-					<p class="ms-txt">价格：59元/24寸</p>
-				</a>
-				<a href="meishi-con.html" class="ms-wrap">
-					<span class="ms-pic">
-						<img src="{% static ''%}img/ms-pic6.jpg" alt="" />
-					</span>
-					<h2 class="ms-tit">番茄烩意面</h2>
-					<p class="ms-txt">价格：39元</p>
-				</a>
+				{% for type in type_list %}
+                    {% for g in type.goods_type_set.all %}
+                        <a href="{% url 'project1:meishi_detail' g.goods.id %}" class="ms-wrap ms-right">
+					        <span class="ms-pic">
+{#						        <img src="{% static g.goods.image.url%}" alt="" />#}
+						        <img src="/static/{{ g.goods.image }} " alt="" />
+					        </span>
+					        <h2 class="ms-tit">{{ g.goods.goods_name }}</h2>
+					        <p class="ms-txt">价格：{{ g.goods.price }}元</p>
+				        </a>
+                    {% endfor %}
+                {% endfor %}
+
+
 			</div>
-			<div class="table-pic clearfix">
-				<a href="meishi-con.html" class="ms-wrap">
+			{% for type in type_list %}
+                <div class="table-pic clearfix">
+                {% for g in type.goods_type_set.all %}
+				<a href="{% url 'project1:meishi_detail' g.goods.id %}" class="ms-wrap">
 					<span class="ms-pic">
-						<img src="{% static ''%}img/ms-pic3.jpg" alt="" />
+						<img src="/static/{{g.goods.image }}" alt="" />
 					</span>
-					<h2 class="ms-tit">菲力黑椒牛排</h2>
-					<p class="ms-txt">价格：69元</p>
+					<h2 class="ms-tit">{{ g.goods.goods_name }}</h2>
+					<p class="ms-txt">价格：{{ g.goods.price }}元</p>
 				</a>
-			</div>
-			<div class="table-pic clearfix">
-				<a href="meishi-con.html" class="ms-wrap ms-right">
-					<span class="ms-pic">
-						<img src="{% static ''%}img/ms-pic4.jpg" alt="" />
-					</span>
-					<h2 class="ms-tit">香煎排意面</h2>
-					<p class="ms-txt">价格：69元</p>
-				</a>
-				<a href="meishi-con.html" class="ms-wrap">
-					<span class="ms-pic">
-						<img src="{% static ''%}img/ms-pic6.jpg" alt="" />
-					</span>
-					<h2 class="ms-tit">番茄烩意面</h2>
-					<p class="ms-txt">价格：39元</p>
-				</a>
-			</div>
-			<div class="table-pic clearfix">
-				<a href="meishi-con.html" class="ms-wrap ms-right">
-					<span class="ms-pic">
-						<img src="{% static ''%}img/ms-pic5.jpg" alt="" />
-					</span>
-					<h2 class="ms-tit">鲜香培根比萨</h2>
-					<p class="ms-txt">价格：59元/24寸</p>
-				</a>
-			</div>
-			<div class="table-pic clearfix">
-				<a href="meishi-con.html" class="ms-wrap ms-right">
-					<span class="ms-pic">
-						<img src="{% static ''%}img/ms-pic2.jpg" alt="" />
-					</span>
-					<h2 class="ms-tit">草莓布丁杯</h2>
-					<p class="ms-txt">价格：12元</p>
-				</a>
-			</div>
-			<div class="table-pic clearfix">
-				<a href="meishi-con.html" class="ms-wrap ms-right">
-					<span class="ms-pic">
-						<img src="{% static ''%}img/ms-pic2.jpg" alt="" />
-					</span>
-					<h2 class="ms-tit">草莓布丁杯</h2>
-					<p class="ms-txt">价格：12元</p>
-				</a>
-			</div>
-			<div class="table-pic clearfix">
-				<a href="meishi-con.html" class="ms-wrap ms-right">
-					<span class="ms-pic">
-						<img src="{% static ''%}img/ms-pic1.jpg" alt="" />
-					</span>
-					<h2 class="ms-tit">海鲜芝士大虾</h2>
-					<p class="ms-txt">价格：49元</p>
-				</a>
-			</div>
+                    {% endfor %}
+			    </div>
+            {% endfor %}
+
+
 			<ul class="ms-paging clearfix">
 				<li><a href="javascript:;" class="pag-item">&lt;</a></li>
 				<li><a href="javascript:;" class="pag-item pag-active">1</a></li>
