--- a/DjangoTest/templates/new_html/pinpai.html
+++ b/DjangoTest/templates/new_html/pinpai.html
@@ -5,19 +5,19 @@
     <title>品牌故事</title>
 {% endblock %}
 
-{% block top1 %}
-            <div class="clearfix nav">
-			<a class="logo" href="javascript:;"></a>
-			<ul class="clearfix nav-wrap">
-				<li><a class="nav-item" href="/project1/index">首页</a></li>
-				<li><a class="nav-item nav-active" href="/project1/pinpai">品牌故事</a></li>
-				<li><a class="nav-item" href="/project1/meishi">美食系列</a></li>
-				<li><a class="nav-item" href="/project1/shop">店面展示</a></li>
-				<li><a class="nav-item" href="/project1/news">新闻资讯</a></li>
-				<li><a class="nav-item" href="/project1/about_us">关于我们</a></li>
-			</ul>
-		</div>
-{% endblock %}
+{#{% block top1 %}#}
+{#            <div class="clearfix nav">#}
+{#			<a class="logo" href="javascript:;"></a>#}
+{#			<ul class="clearfix nav-wrap">#}
+{#				<li><a class="nav-item" href="/project1/index">首页</a></li>#}
+{#				<li><a class="nav-item nav-active" href="/project1/pinpai">品牌故事</a></li>#}
+{#				<li><a class="nav-item" href="/project1/meishi">美食系列</a></li>#}
+{#				<li><a class="nav-item" href="/project1/shop">店面展示</a></li>#}
+{#				<li><a class="nav-item" href="/project1/news">新闻资讯</a></li>#}
+{#				<li><a class="nav-item" href="/project1/about_us">关于我们</a></li>#}
+{#			</ul>#}
+{#		</div>#}
+{#{% endblock %}#}
 
 
 {% block content %}
