--- a/DjangoTest/templates/new_html/meishi-con.html
+++ b/DjangoTest/templates/new_html/meishi-con.html
@@ -19,9 +19,7 @@
 				<img src="/static/{{ good.image }}"/>
 			</div>
 			<div class="mei-txt">
-				<p>菲力牛排，就是用一定厚度的牛里脊肉做出的牛排。菲力指的是牛里脊肉（beef tenderloin）。在澳洲，这块肉被称为“眼菲力”，在法国和英国被称为filet和fillet，中文音译菲力。</p>
-				<p>很多人认为牛排最早是西方人的美食，在欧洲中世纪的时候就开始出现了，牛排只有贵族才可以吃到的美食，而猪肉和羊肉只有平常百姓才可以吃到的，牛肉是贵族的象征，想要吃到牛排除非得到国王的赏识或者立下过过劳的战士才有机会吃到的。</p>
-				<p>尊贵的牛肉被他们搭配上了当时也是享有尊贵身份的胡椒及香辛料一起烹调，并在特殊场合中供应，以彰显主人的尊贵身份。到了18世纪，英国已经成了著名的牛肉食用大国。</p>
+				{{ good.description | safe}}
 			</div>
 			<a href="{% url 'project1:meishi' %}" class="meishi-icon">返回列表页</a>
 		</div>
