--- a/DjangoTest/templates/new_html/news.html
+++ b/DjangoTest/templates/new_html/news.html
@@ -26,112 +26,60 @@
 		</ul>
 		<div class="newslist-wrap">
 			<p class="newslist-tit">新闻资讯</p>
+            {% for news in news_list %}
+
 			<dl class="newslist-box clearfix">
 				<dt class="newslist-pic">
-					<img src="{% static ''%}img/news-pic1.jpg"/>
+					<img src="/static/{{ news.image }} "/>
 				</dt>
 				<dd class="newslist-txt">
-					<a href="news-con.html" class="newslist-font24">西餐代表 牛排的种类和吃法</a>
+					<a href="{% url 'project1:news_detail' news.id %}" class="newslist-font24">{{ news.news_name }}</a>
 					<ul class="newslist-ul">
 						<li class="newslist-li">
-							<p class="newslist-time">2016.12.25</p>
+							<p class="newslist-time">{{ news.date }}</p>
 						</li>
-						<li class="newslist-li">
-							<a href="news-con.html" class="newslist-con">提到牛排，脑子里就会想到焦棕褐色、表面扶着香甜的肉汁，切开后的粉红肉质，入口之后留下的满口肉香。吃牛排其实是非常讲究的，精致的牛肉配上美味的香料，加以烹调，是款待尊贵客人的最佳美食。</a>
+						<li class="newslist-li" style="width: 644px;height: 35px;overflow: hidden">
+							<a href="{% url 'project1:news_detail' news.id %}" class="newslist-con">{{ news.description | safe}}</a>
 						</li>
-						<li class="newslist-li"><a class="newslist-link" href="news-con.html">&lt;阅读全文&gt;</a></li>
+						<li class="newslist-li"><a class="newslist-link" href="{% url 'project1:news_detail' news.id %}">&lt;阅读全文&gt;</a></li>
 					</ul>
 				</dd>
 			</dl>
 			<span class="news-line">
 				<img src="{% static ''%}img/news-line.png"/>
 			</span>
-			<dl class="newslist-box clearfix">
-				<dt class="newslist-pic">
-					<img src="{% static ''%}img/news-pic2.jpg"/>
-				</dt>
-				<dd class="newslist-txt">
-					<a href="news-con.html" class="newslist-font24">西餐代表 牛排的种类和吃法</a>
-					<ul class="newslist-ul">
-						<li class="newslist-li">
-							<p class="newslist-time">2016.12.25</p>
-						</li>
-						<li class="newslist-li">
-							<a href="news-con.html" class="newslist-con">提到牛排，脑子里就会想到焦棕褐色、表面扶着香甜的肉汁，切开后的粉红肉质，入口之后留下的满口肉香。吃牛排其实是非常讲究的，精致的牛肉配上美味的香料，加以烹调，是款待尊贵客人的最佳美食。</a>
-						</li>
-						<li class="newslist-li"><a class="newslist-link" href="news-con.html">&lt;阅读全文&gt;</a></li>
-					</ul>
-				</dd>
-			</dl>
-			<span class="news-line">
-				<img src="{% static ''%}img/news-line.png"/>
-			</span>
-			<dl class="newslist-box clearfix">
-				<dt class="newslist-pic">
-					<img src="{% static ''%}img/news-pic3.jpg"/>
-				</dt>
-				<dd class="newslist-txt">
-					<a href="news-con.html" class="newslist-font24">西餐代表 牛排的种类和吃法</a>
-					<ul class="newslist-ul">
-						<li class="newslist-li">
-							<p class="newslist-time">2016.12.25</p>
-						</li>
-						<li class="newslist-li">
-							<a href="news-con.html" class="newslist-con">提到牛排，脑子里就会想到焦棕褐色、表面扶着香甜的肉汁，切开后的粉红肉质，入口之后留下的满口肉香。吃牛排其实是非常讲究的，精致的牛肉配上美味的香料，加以烹调，是款待尊贵客人的最佳美食。</a>
-						</li>
-						<li class="newslist-li"><a class="newslist-link" href="news-con.html">&lt;阅读全文&gt;</a></li>
-					</ul>
-				</dd>
-			</dl>
-			<span class="news-line">
-				<img src="{% static ''%}img/news-line.png"/>
-			</span>
-			<dl class="newslist-box clearfix">
-				<dt class="newslist-pic">
-					<img src="{% static ''%}img/news-pic4.jpg"/>
-				</dt>
-				<dd class="newslist-txt">
-					<a href="news-con.html" class="newslist-font24">西餐代表 牛排的种类和吃法</a>
-					<ul class="newslist-ul">
-						<li class="newslist-li">
-							<p class="newslist-time">2016.12.25</p>
-						</li>
-						<li class="newslist-li">
-							<a href="news-con.html" class="newslist-con">提到牛排，脑子里就会想到焦棕褐色、表面扶着香甜的肉汁，切开后的粉红肉质，入口之后留下的满口肉香。吃牛排其实是非常讲究的，精致的牛肉配上美味的香料，加以烹调，是款待尊贵客人的最佳美食。</a>
-						</li>
-						<li class="newslist-li"><a class="newslist-link" href="news-con.html">&lt;阅读全文&gt;</a></li>
-					</ul>
-				</dd>
-			</dl>
-			<span class="news-line">
-				<img src="{% static ''%}img/news-line.png"/>
-			</span>
-			<dl class="newslist-box clearfix">
-				<dt class="newslist-pic">
-					<img src="{% static ''%}img/news-pic5.jpg"/>
-				</dt>
-				<dd class="newslist-txt">
-					<a href="news-con.html" class="newslist-font24">西餐代表 牛排的种类和吃法</a>
-					<ul class="newslist-ul">
-						<li class="newslist-li">
-							<p class="newslist-time">2016.12.25</p>
-						</li>
-						<li class="newslist-li">
-							<a href="news-con.html" class="newslist-con">提到牛排，脑子里就会想到焦棕褐色、表面扶着香甜的肉汁，切开后的粉红肉质，入口之后留下的满口肉香。吃牛排其实是非常讲究的，精致的牛肉配上美味的香料，加以烹调，是款待尊贵客人的最佳美食。</a>
-						</li>
-						<li class="newslist-li"><a class="newslist-link" href="news-con.html">&lt;阅读全文&gt;</a></li>
-					</ul>
-				</dd>
-			</dl>
-			<ul class="shop-paging clearfix">
-				<li><a href="javascript:;" class="pag-item">&lt;</a></li>
-				<li><a href="news.html" class="pag-item pag-active">1</a></li>
-				<li><a href="javascript:;" class="pag-item">2</a></li>
-				<li><a href="javascript:;" class="pag-item">3</a></li>
-				<li><a href="javascript:;" class="pag-item">4</a></li>
-				<li><a href="javascript:;" class="pag-item">&gt;</a></li>
-			</ul>
+
+            {% endfor %}
 		</div>
+
+            <ul class="shop-paging clearfix">
+
+            {% if news_list.has_previous %}
+                <li><a href="" class="pag-item">&lt;</a></li>
+            {% endif %}
+
+				{% for page in page_range %}
+                    {% if page == request.GET.page|add:0 %}
+                <li><a href="?page={{ page }}" class="pag-item pag-active">{{ page }}</a></li>
+				    {% elif number < request.GET.get.page|add:0 and number == page %}
+                <li><a href="?page={{ page }}" class="pag-item pag-active">{{ page }}</a></li>
+                    {% elif 1 > request.GET.get.page|add:0 and number == page %}
+                <li><a href="?page={{ page }}" class="pag-item pag-active">{{ page }}</a></li>
+
+
+                    {% else %}
+                <li><a href="?page={{ page }}" class="pag-item ">{{ page }}</a></li>
+                    {% endif %}
+                {% endfor %}
+
+			{% if news_list.has_next %}
+                <li><a href="" class="pag-item">&gt;</a></li>
+            {% endif %}
+
+            </ul>
+
+
+
 {% endblock %}
 
 {% block script %}
